# NeuralNetwork

./: CMakeLists.txt  README.md
include/: Canvas.hpp  Layer.hpp  Matrix.hpp  NeuralNetwork.hpp
src/: CMakeLists.txt  Canvas.cpp  Layer.cpp  NeuralNetwork.cpp  main.cpp
